add fonts and header

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,101 @@
    <link rel="stylesheet" href="css/app.min.css">
 </head>
 <body>
-   12343535
+
+   <!-- HEADER -->
+
+   <div class="wrapper">
+      <header class="header">
+         <div class="header__logo"><img src="./images/dest/logo.png" alt="Smart техника"></div>
+         <div class="header__menu">
+            <div class="header__about">
+               <div class="header__phone_1"><a href="tel:+78126605054">+7 (812) 660-50-54</a></div>
+               <div class="header__phone_2"><a href="tel:+79581119503">+7 (958) 111-95-03</a></div>
+               <div class="header__schedule">Пн-вс: с 10:00 до 21:00</div>
+            </div>
+            <div class="header__inputs">
+               <div class="header__search"><input type="text" placeholder="Поиск" class="header__search_input"></div>
+               <div class="header__eye header__click"><img src="./images/dest/icons/header/eye_empty.svg" alt="Отслеживание"></div>
+               <div class="header__like header__click"><img src="./images/dest/icons/like_empty.svg" alt="Нравиться"></div>
+               <div class="header__compare header__click"><img src="./images/dest/icons/compare.svg" alt="Сравнение"></div>
+               <div class="header__cart header__click"><img src="./images/dest/icons/basket/cart_empty.svg" alt="Корзина"></div>
+               <div class="header__enter header__button">Войти</div>
+            </div>
+         </div>
+      </header>
+   </div>
+
+     <!-- menu -->
+
+   <menu>
+      <div class="menu__wrapper">
+         <div class="menu__container">
+            <div class="menu__catalog">
+               <img src="./images/dest/icons/menu_icon.svg" alt="Меню" class="menu__icon">
+               <div class="catalog__name">Каталог товаров</div>
+            </div>
+            <nav class="menu__nav">
+               <ul>
+                  <li><a href="#">О компании</a></li>
+                  <li><a href="#">Акции</a></li>
+                  <li><a href="#">Рассрочка 0|0|18</a></li>
+                  <li><a href="#">Сервис и гарантия</a></li>
+                  <li><a href="#">Опт/дропшиппинг</a></li>
+                  <li><a href="#">Контакты</a></li>
+               </ul>
+            </nav>
+         </div>
+      </div>
+   </menu>
+
+   <div class="wrapper">
+      <div class="catalog">
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/gyro.svg" alt="Гироскутеры">
+            <div>Гироскутеры</div>
+         </a>
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/kick_scooter.svg" alt="Самокаты">
+            <div>Самокаты</div>
+         </a>
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/monocoles.svg" alt="Моноколеса">
+            <div>Моноколеса</div>
+         </a>
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/segway.svg" alt="Сигвеи и мини-сигвеи">
+            <div>Сигвеи и мини-сигвеи</div>
+         </a>
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/scooter.svg" alt="Электроскутеры">
+            <div>Электроскутеры</div>
+         </a>
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/bike.svg" alt="Электровелосипеды">
+            <div>Электровелосипеды</div>
+         </a>
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/skate.svg" alt="Электроскейты">
+            <div>Электроскейты</div>
+         </a>
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/car.svg" alt="Электромобили">
+            <div>Электромобили</div>
+         </a>
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/headphones.svg" alt="Аксессуары">
+            <div>Аксессуары</div>
+         </a>
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/gamepad.svg" alt="Умные игрушки">
+            <div>Умные игрушки</div>
+         </a>
+         <a href="#" class="catalog__item">
+            <img src="./images/dest/icons/menu/watch.svg" alt="Smart Watch">
+            <div>Smart Watch</div>
+         </a>
+      </div>
+   </div>
 
 <script src="js/app.min.js"></script>
 </body>
