--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
       </header>
    </div>
 
+
      <!-- menu -->
 
    <menu>
@@ -56,7 +57,30 @@
       </div>
    </menu>
 
-   <div class="wrapper">
+   <div class="menu-mobile">
+      <div class="menu-mobile__home menu-mobile__item">
+         <img src="./images/dest/icons/home.png" alt="Главная Страница">
+         <p>Главная</p>
+      </div>
+      <div class="menu-mobile__catalog menu-mobile__item">
+         <img src="./images/dest/icons/menu_icon.svg" alt="Каталог">
+         <p>Каталог</p>
+      </div>
+      <div class="menu-mobile__cart menu-mobile__item">
+         <img src="./images/dest/icons/basket/cart-icon.svg" alt="Корзина">
+         <p>Корзина</p>
+      </div>
+      <div class="menu-mobile__search menu-mobile__item">
+         <img src="./images/dest/icons/search.svg" alt="Поиск">
+         <p>Поиск</p>
+      </div>
+      <div class="menu-mobile__yet menu-mobile__item">
+         <img src="./images/dest/icons/yet.png" alt="Ещё">
+         <p>Ещё</p>
+      </div>
+   </div>
+
+   <div class="catalog__wrapper">
       <div class="catalog">
          <a href="#" class="catalog__item">
             <img src="./images/dest/icons/menu/gyro.svg" alt="Гироскутеры">
@@ -104,6 +128,7 @@
          </a>
       </div>
    </div>
+
 
 <script src="js/app.min.js"></script>
 </body>
