--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
       </div>
    </div>
 
+
    <div class="catalog__wrapper">
       <div class="catalog">
          <a href="#" class="catalog__item">
@@ -141,6 +142,24 @@
             <div>Smart Watch</div>
          </a>
       </div>
+
+      <div class="menu-else">
+         <h3 class="menu-else__title">Ещё</h3>
+         <a href="#" class="menu-else__item"><div>О компании</div></a>
+         <a href="#" class="menu-else__item"><div>Акции</div></a>
+         <a href="#" class="menu-else__item"><div>Рассрочка 0–0-12</div></a>
+         <a href="#" class="menu-else__item"><div>Сервис и ремонт</div></a>
+         <a href="#" class="menu-else__item"><div>Опт/дропшиппинг</div></a>
+         <a href="#" class="menu-else__item"><div>Контакты</div></a>
+      </div>
+
+      <div class="menu-search">
+         <h3 class="menu-else__title">Поиск</h3>
+         <input type="search" name="search" id="ID_search_menu_mobile" class="menu-search__search" placeholder="Введите запрос, например «Smart balance»">
+         <button class="menu-search__button header__button">Искать</button>
+         <button class="menu-search__button_cencel header__button">Отмена</button>
+      </div>
+
    </div>
 
 <div class="wrapper">
