fix modal menu search

--- a/app/index.html
+++ b/app/index.html
@@ -156,8 +156,10 @@
       <div class="menu-search">
          <h3 class="menu-else__title">Поиск</h3>
          <input type="search" name="search" id="ID_search_menu_mobile" class="menu-search__search" placeholder="Введите запрос, например «Smart balance»">
-         <button class="menu-search__button header__button">Искать</button>
-         <button class="menu-search__button_cencel header__button">Отмена</button>
+         <div class="menu-else__buttons">
+            <button class="menu-search__button_cencel header__button">Выйти</button>
+            <button class="menu-search__button header__button">Искать</button>
+         </div>
       </div>
 
    </div>
