--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>SMART Техника</title>
    <link rel="shortcut icon" href="./images/src/favicon.ico" type="image/x-icon">
+   <link rel="stylesheet" href="./css/font-awesome.min.css">
    <link
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
@@ -164,7 +165,7 @@
 
    </div>
 
-<div class="wrapper">
+<div class="wrapper_content">
    <section class="hero">
       <div class="swiper">
          <div class="swiper-wrapper">    
@@ -207,6 +208,386 @@
          </div>
          <div class="swiper-pagination"></div>
        </div>
+   </section>
+</div>
+
+<!-- HITS -->
+<div class="wrapper_content">
+   <section class="hits">
+      <div class="hits__title component-title-filter">
+         <h3>Хиты продаж</h3>
+         <a href="#">
+            Все товары
+            <i class="fa fa-caret-right component-title-filter_icon" aria-hidden="true"></i>
+         </a>
+      </div>
+      <div class="hits__cards">
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+                  <div class="card__button-new">Новинка</div>
+                  <div class="card__button-hit">Хит продаж</div>
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>
+
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+                  <div class="card__button-new">Новинка</div>
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>      
+
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+                  <div class="card__button-hit">Хит продаж</div>
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>      
+
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>      
+      </div>
+   </section>
+</div>
+
+<!-- NEWS -->
+
+<div class="wrapper_content">
+   <section class="hits">
+      <div class="hits__title component-title-filter">
+         <h3>Новинки</h3>
+         <a href="#">
+            Все товары
+            <i class="fa fa-caret-right component-title-filter_icon" aria-hidden="true"></i>
+         </a>
+      </div>
+      <div class="hits__cards">
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+                  <div class="card__button-new">Новинка</div>
+                  <div class="card__button-hit">Хит продаж</div>
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>
+
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+                  <div class="card__button-new">Новинка</div>
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>      
+
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+                  <div class="card__button-hit">Хит продаж</div>
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>      
+
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>      
+      </div>
+   </section>
+</div>
+
+<!-- AD -->
+
+<div class="wrapper_content">
+   <section class="ads">
+      <article class="ad">
+         <div class="ad__text">Скидки до 30% на сигвеи</div>
+         <img src="./images/dest/sig.png" alt="Сигвей" class="ad__img">
+      </article>
+      <article class="ad">
+         <div class="ad__text">Неделя смарт часов</div>
+         <img src="./images/dest/wat.png" alt="Часы" class="ad__img">
+      </article>
    </section>
 </div>
   
