--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,8 @@
             <li><a href="#"><div>История покупок</div></a></li>
             <li><a href="#"><div>Избранное</div></a></li>
             <li><a href="#"><div>Сменить пароль</div></a></li>
-            <li class="menu-profile__exit">Выйти</li>
+            <li class="menu-profile__enter">Войти</li>
+            <li class="menu-profile__exit menu-profile__enter__active">Выйти</li>
          </ul>
       </div>
    </div>
@@ -590,6 +591,202 @@
       </article>
    </section>
 </div>
+
+<!-- SIGWAYS -->
+
+<div class="wrapper_content">
+   <section class="hits">
+      <div class="hits__title component-title-filter">
+         <h3>Сигвеи</h3>
+         <a href="#">
+            Все товары
+            <i class="fa fa-caret-right component-title-filter_icon" aria-hidden="true"></i>
+         </a>
+      </div>
+      <div class="hits__cards">
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+                  <div class="card__button-new">Новинка</div>
+                  <div class="card__button-hit">Хит продаж</div>
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>
+
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+                  <div class="card__button-new">Новинка</div>
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>      
+
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+                  <div class="card__button-hit">Хит продаж</div>
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>      
+
+         <article class="card">
+            <div class="card__top">
+               <img src="./images/dest/icons/product.png" alt="Гироскутер" class="card__img">
+               <div class="card__top-buttons">
+               </div>              
+            </div>
+            <div class="card__wrapper">
+               <div class="card__category">Сигвеи</div>
+               <div class="card__name">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+               <div class="card__likes">
+                  <div class="card__stars">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                     <img src="./images/dest/icons/star.svg" alt="Звезда">
+                  </div>
+                  <img src="./images/dest/icons/ques.svg" alt="Отзывы" class="card__likes_ques">
+                  <div class="card__count">(17)</div>
+               </div>
+               <div class="card__prices">
+                  <div class="card__prices_left">
+                     <div class="card__old-price">5490 &#8381</div>
+                     <div class="card__new-price">4990 &#8381</div>
+                     <div class="card__sale">
+                        <div class="card__procent">20%</div>
+                        <div class="card__sale-rubles">- 1000 &#8381</div>
+                     </div>
+                  </div>
+                  <div class="prices__right">
+                     <div class="like"></div>
+                     <div class="compare"></div>
+                  </div>
+               </div>
+               <div class="card__buy">
+                  <button class="card__one-click">Купить в 1 клик</button>
+                  <button class="card__buy-icon"></button>
+               </div>
+            </div>           
+         </article>      
+      </div>
+   </section>
+</div>
+
+<div class="modal" id="id-modal-enter">
+   <div class="modal__overlay">
+      <div class="modal__window">
+         <div class="modal__header">
+            <h3 class="modal__title">Вход</h3>
+            <img src="./images/dest/icons/modal_exit.svg" alt="Выйти" class="modal__icon-close" id="id-modal-enter-exit">
+         </div>
+      </div>
+   </div>
+</div>
+
+
   
 
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
