--- a/app/index.html
+++ b/app/index.html
@@ -782,6 +782,25 @@
             <h3 class="modal__title">Вход</h3>
             <img src="./images/dest/icons/modal_exit.svg" alt="Выйти" class="modal__icon-close" id="id-modal-enter-exit">
          </div>
+         <div class="modal__wrapper">
+            <form action=""handler.php"">
+               <div class="modal__name-input">Эл. почта или телефон</div>
+               <input type="email" class="modal__input-email mt8">
+               <div class="modal__name-input  mt20">Пароль</div>
+               <div class="modal__passord">
+                  <input type="password" class="modal__input-password mt8">
+                  <div class="modal__password_eye"></div>
+               </div>
+               <a href="#" class="modal__forgot mt10">Забыли пароль?</a>
+               <div class="modal__check-me mt20">
+                  <label for="element" class="check__label">
+                     <span>Запомнить меня</span>
+                  </label>
+               </div>
+               <button class="modal__button_enter mt20">Войти</button>
+            </form>
+            <div class="modal__sign-enter mt20">Зарегистрироваться</div>
+         </div>
       </div>
    </div>
 </div>
