--- a/app/index.html
+++ b/app/index.html
@@ -59,12 +59,12 @@
             </div>
             <nav class="menu__nav">
                <ul>
-                  <li><a href="#">О компании</a></li>
-                  <li><a href="#">Акции</a></li>
-                  <li><a href="#">Рассрочка 0|0|18</a></li>
-                  <li><a href="#">Сервис и гарантия</a></li>
-                  <li><a href="#">Опт/дропшиппинг</a></li>
-                  <li><a href="#">Контакты</a></li>
+                  <li><a href="./about.html">О компании</a></li>
+                  <li><a href="./about.html">Акции</a></li>
+                  <li><a href="./about.html">Рассрочка 0|0|18</a></li>
+                  <li><a href="./about.html">Сервис и гарантия</a></li>
+                  <li><a href="./about.html">Опт/дропшиппинг</a></li>
+                  <li><a href="./about.html">Контакты</a></li>
                </ul>
             </nav>
          </div>
@@ -145,12 +145,12 @@
 
       <div class="menu-else">
          <h3 class="menu-else__title">Ещё</h3>
-         <a href="#" class="menu-else__item"><div>О компании</div></a>
-         <a href="#" class="menu-else__item"><div>Акции</div></a>
-         <a href="#" class="menu-else__item"><div>Рассрочка 0–0-12</div></a>
-         <a href="#" class="menu-else__item"><div>Сервис и ремонт</div></a>
-         <a href="#" class="menu-else__item"><div>Опт/дропшиппинг</div></a>
-         <a href="#" class="menu-else__item"><div>Контакты</div></a>
+         <a href="./about.html" class="menu-else__item"><div>О компании</div></a>
+         <a href="./about.html" class="menu-else__item"><div>Акции</div></a>
+         <a href="./about.html" class="menu-else__item"><div>Рассрочка 0–0-12</div></a>
+         <a href="./about.html" class="menu-else__item"><div>Сервис и ремонт</div></a>
+         <a href="./about.html" class="menu-else__item"><div>Опт/дропшиппинг</div></a>
+         <a href="./about.html" class="menu-else__item"><div>Контакты</div></a>
       </div>
 
       <div class="menu-search">
